# Python-Type-Challenges

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: test.yaml
challenges/0001-basic/: code.py
challenges/advance-descriptor-basic/: solution.py
challenges/advance-my-method/: question.py
challenges/advanced-buffer/: hints.md  question.py  solution.py
challenges/advanced-callable/: question.py
challenges/advanced-callable-protocol/: hints.md  question.py  solution.py
challenges/advanced-decorator/: hints.md  question.py  solution.py
challenges/advanced-descriptor/: hints.md  question.py  solution.py
challenges/advanced-descriptor-basic/: question.py  solution.py
challenges/advanced-forward/: hints.md  question.py  solution.py
challenges/advanced-generator/: hints.md  question.py  solution.py
challenges/advanced-generic-class/: hints.md  question.py  solution.py
challenges/advanced-generic-param/: question.py  solution.py
challenges/advanced-my-method/: question.py  solution.py
challenges/advanced-never/: hints.md  question.py  solution.py
challenges/advanced-never2/: question.py  solution.py
challenges/advanced-noreturn/: hints.md  question.py  solution.py
challenges/advanced-overload/: hints.md  question.py  solution.py
challenges/advanced-overload-default/: question.py
challenges/advanced-overload-generic/: question.py  solution.py
challenges/advanced-overload-literal/: question.py  solution.py
challenges/advanced-paramspec/: hints.md  question.py  solution.py
challenges/advanced-protocol/: question.py  solution.py
challenges/advanced-recursive/: question.py  solution.py
challenges/advanced-self/: question.py  solution.py
challenges/advanced-type/: question.py  solution.py
challenges/advanced-typed-dict/: question.py  solution.py
challenges/advanced-typed-dict-required-key/: question.py  solution.py
challenges/advanced-typegaurd/: question.py
challenges/advanced-typeguard/: question.py  solution.py
challenges/advanced-typeshed/: question.py  solution.py
challenges/advanced-unnamed-args/: question.py
docs/: Contribute.md  Development.md
server/: app.py  utils.py
templates/: base.html  challenge.html  challenge_list.html  challenges.html  github_ribbon.html  index.html
tests/: conftest.py  fixture.py  test_api.py  test_challenge.py  test_hints.py  test_identical.py  test_questions.py  test_solutions.py  test_utils.py
views/: challenge.py  sitemap.py  utils.py  views.py
(+126 files in other folders)
