[project]
name = ""
version = ""
description = ""
authors = [
    {name = "laike9m", email = "laike9m@gmail.com"},
]
dependencies = [
    "flask>=3.0.0",
    "typing-extensions>=4.8.0",
    "pyright>=1.1.334",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
plugins = ["pdm-autoexport"]

[tool.pdm.scripts]
dev = "flask --app app run --debug"
test = "pytest -n auto"
run_black = "black ."
djhtml = "djhtml --tabwidth 2 templates"
format = {composite = ["run_black", "djhtml"]}

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.3",
    "djhtml>=3.0.6",
    "pre-commit>=3.5.0",
    "pytest-xdist>=3.3.1",
    "black>=23.11.0",
]

[[tool.pdm.autoexport]]
filename = "requirements.txt"
groups = ["default"]
without-hashes = true

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
